feat: add typed zolt plan command